Brain-BT/force-app/main/default/objects/Contact/fields/Assigned_Crew__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Crew__c</fullName>
    <label>Assigned Crew</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1COMM01</fullName>
            </value>
            <value>
                <fullName>1COMM02</fullName>
            </value>
            <value>
                <fullName>1COMM03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>