Brain-BT/force-app/main/default/objects/Contact/fields/Base_Weekly_Pay__c.field-meta.xml
<CustomField>
    <fullName>Base_Weekly_Pay__c</fullName>
    <formula>Weekly__c *  Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hourly Rate multiplied by  the Weekly Overtime Threshold field.</inlineHelpText>
    <label>Base Weekly Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>