Brain-BT/force-app/main/default/objects/Contact/fields/Contact_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_No__c</fullName>
    <formula>IF(
ISBLANK(Phone),
NULL,
&quot;(&quot; + LEFT( Phone, 3) + &quot;)-&quot; + MID(Phone, 4, 3) + &quot;-&quot; + MID(Phone, 7, 4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact_Phone_No</label>
    <type>Text</type>
</CustomField>