Brain-BT/force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Glazier</fullName>
            </value>
            <value>
                <fullName>Estimator</fullName>
            </value>
            <value>
                <fullName>Framer</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Foreman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>