Brain-BT/force-app/main/default/objects/Contact/fields/Daily_Over_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Daily_Over_Time_Threshold__c</fullName>
    <inlineHelpText>Number of hours a resource works each day before receiving overtime.</inlineHelpText>
    <label>Daily Overtime Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>