Brain-BT/force-app/main/default/objects/Contact/fields/Envelope_Sent__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Sent__c</fullName>
    <label>Envelope Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>