Brain-BT/force-app/main/default/objects/Contact/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <inlineHelpText>The hourly rate this Contact charges.</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>