Brain-BT/force-app/main/default/objects/Contact/fields/Hours_Worked_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_This_Week__c</fullName>
    <inlineHelpText>Number of hours the Contact has worked this week.  This number is the sum of Time Card hours for this week.  
 Weekly hours are calculated from Sunday to Saturday.</inlineHelpText>
    <label>Hours Worked This Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>