Brain-BT/force-app/main/default/objects/Contact/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <label>Daily Overtime Premium %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>