Brain-BT/force-app/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the Primary Contact for the vendor Account, Primary Contact is used in BT RFQ Process</description>
    <inlineHelpText>This field is used to identify the Primary Contact for the vendor Account, Primary Contact which will receive emails from the system.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>