Brain-BT/force-app/main/default/objects/Contact/fields/Primary_PO_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_PO_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary PO Contact</label>
    <type>Checkbox</type>
</CustomField>