Brain-BT/force-app/main/default/objects/Contact/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Level</valueSetName>
    </valueSet>
</CustomField>