Brain-BT/force-app/main/default/objects/Contact/fields/Weekly__c.field-meta.xml
<CustomField>
    <fullName>Weekly__c</fullName>
    <inlineHelpText>Number of hours a resource works, per week, before receiving overtime.</inlineHelpText>
    <label>Weekly Overtime Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>