Brain-BT/force-app/main/default/objects/Contact/fields/Weekly_Overtime_Premium__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Overtime_Premium__c</fullName>
    <label>Weekly Overtime Premium %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>